Fix a mismatch in input alignment

--- a/index.css
+++ b/index.css
@@ -19,6 +19,11 @@ p {
   font-size: 16px;
 }
 
+.fake-dat-gui {
+  position: relative;
+  left: -7px;
+}
+
 .main-div {
   border: 1px solid #A0C5FF;
   background-color: #000;
